--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-trait = "0.1.89"
 aws-config = "1.8.5"
 aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
 aws-sdk-dynamodb = { version = "1.88.0", features = ["rustls"] }
