--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,18 @@ aws-sdk-dynamodb = { version = "1.88.0", features = ["rustls"] }
 clap = { version = "4.5.45", features = ["derive"] }
 color-eyre = "0.6.5"
 crossterm = { version = "0.29.0", features = ["event-stream"] }
+directories = "6.0.0"
+lazy_static = "1.5.0"
 octocrab = "0.44.1"
 ratatui = "0.30.0-alpha.5"
 rustls = "0.23.31"
 serde_json = "1.0.142"
-tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync"] }
 tokio-stream = "0.1.17"
+tracing = "0.1.41"
+tracing-error = "0.2.1"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+unicode-width = "0.2.0"
 
 [dev-dependencies]
 assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
