--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ aws-config = "1.8.5"
 aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
 aws-sdk-dynamodb = { version = "1.88.0", features = ["rustls"] }
 clap = { version = "4.5.45", features = ["derive"] }
+chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
 color-eyre = "0.6.5"
 crossterm = { version = "0.29.0", features = ["event-stream"] }
 directories = "6.0.0"
+humansize = "2.1.3"
 lazy_static = "1.5.0"
 octocrab = "0.44.1"
 ratatui = "0.30.0-alpha.5"
