--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ octocrab = "0.44.1"
 ratatui = "0.30.0-alpha.5"
 rustls = "0.23.31"
 serde_json = "1.0.142"
+terminal-light = "1.0.1"
 tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
 tokio-stream = "0.1.17"
 tracing = "0.1.41"
