--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ humansize = "2.1.3"
 lazy_static = "1.5.0"
 octocrab = "0.44.1"
 ratatui = "0.30.0-alpha.5"
+rand = "0.8.5"
 rustls = "0.23.31"
 serde_json = "1.0.142"
 terminal-light = "1.0.1"
