--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rand = "0.8.5"
 rustls = "0.23.31"
 serde_json = "1.0.142"
 terminal-light = "1.0.1"
+throbber-widgets-tui = "0.10.0"
 tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
 tokio-stream = "0.1.17"
 tracing = "0.1.41"
