--- a/compose.yaml
+++ b/compose.yaml
@@ -22,7 +22,7 @@ services:
     depends_on:
       - dynamodb
   seed:
-    image: python:3.12-slim
+    image: astral/uv:python3.12-bookworm-slim
     profiles:
       - seed
     working_dir: /app
@@ -41,8 +41,33 @@ services:
     entrypoint: ["/bin/sh", "-c"]
     command:
       - >-
-        python -m pip install --no-cache-dir -q boto3
-        && python seed.py --endpoint-url "$${DYNAMO_ENDPOINT}" --table "$${DYNAMO_TABLE}" $${SEED_ARGS}
+        uv run --script seed.py --endpoint-url "$${DYNAMO_ENDPOINT}" --table "$${DYNAMO_TABLE}" $${SEED_ARGS}
+
+  dynamate:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    profiles:
+      - dynamate
+    ports:
+      - "7681:7681"
+    environment:
+      - DYNAMATE_USE_TTYD=${DYNAMATE_USE_TTYD:-1}
+      - TTYD_PORT=7681
+      - DYNAMATE_TABLE=${DYNAMO_TABLE:-dyno-music}
+      - AWS_REGION=${AWS_REGION:-us-east-1}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-local}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-local}
+      - AWS_EC2_METADATA_DISABLED=true
+    command:
+      - --endpoint-url
+      - ${DYNAMO_ENDPOINT:-http://dynamodb:8000}
+    volumes:
+      - dynamate-data:/data
+    depends_on:
+      dynamodb:
+        condition: service_healthy
 
 volumes:
   dynamodb-data: {}
+  dynamate-data: {}
