--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
+arboard = "3.4.1"
 aws-config = "1.8.5"
 aws-credential-types = { version = "1.2.5", features = ["hardcoded-credentials"] }
 aws-sdk-dynamodb = { version = "1.88.0", features = ["rustls"] }
