--- a/deny.toml
+++ b/deny.toml
@@ -4,6 +4,10 @@ all-features = true
 [advisories]
 version = 2
 yanked = "deny"
+ignore = [
+    { id = "RUSTSEC-2025-0111", reason = "Transitive via testcontainers dev dependency; no fixed upstream release available." },
+    { id = "RUSTSEC-2025-0134", reason = "Transitive via aws-smithy/testcontainers; advisory has no safe upgrade path yet." },
+]
 
 [bans]
 multiple-versions = "warn"
@@ -12,10 +16,28 @@ highlight = "all"
 
 [licenses]
 version = 2
-unlicensed = "deny"
-copyleft = "warn"
-allow-osi-fsf-free = "either"
+allow = [
+    "0BSD",
+    "Apache-2.0",
+    "Apache-2.0 WITH LLVM-exception",
+    "BSD-2-Clause",
+    "BSD-3-Clause",
+    "BSL-1.0",
+    "CC0-1.0",
+    "ISC",
+    "LGPL-2.1-or-later",
+    "MIT",
+    "MIT-0",
+    "MPL-2.0",
+    "OpenSSL",
+    "Unicode-3.0",
+    "Unlicense",
+    "Zlib",
+]
 confidence-threshold = 0.8
+
+[licenses.private]
+ignore = true
 
 [sources]
 unknown-registry = "deny"
