--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "dynamate"
 version = "0.1.0"
+description = "Terminal UI for DynamoDB exploration and querying"
+repository = "https://github.com/fiam/dynamate"
+homepage = "https://github.com/fiam/dynamate"
 edition = "2024"
 publish = false
 
@@ -34,3 +37,11 @@ unicode-width = "0.2.0"
 assert_cmd = { version = "2.0.17", features = ["color", "color-auto"] }
 predicates = "3.1.3"
 testcontainers = { version = "0.25.0", default-features = false, features = ["aws-lc-rs"] }
+
+[package.metadata.dist]
+# publish = false means dist needs an explicit opt-in
+dist = true
+
+[profile.dist]
+inherits = "release"
+lto = "thin"
