fix(ci): reduce dynamodb test flakiness and enable full backtraces

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -31,6 +31,9 @@ concurrency:
   group: release-cut-${{ inputs.ref }}
   cancel-in-progress: false
 
+env:
+  RUST_BACKTRACE: full
+
 jobs:
   cut-release:
     name: Bump version, create tag, dispatch release
