--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,14 +7,12 @@ on:
         description: "dist plan output JSON"
         required: true
         type: string
-      dry_run:
-        description: "Build image without pushing to GHCR"
-        required: false
-        default: false
-        type: boolean
-      source_ref:
-        description: "Git ref to build when dry_run=true"
-        required: false
+  workflow_dispatch:
+    inputs:
+      ref:
+        description: "Git ref to build in dry-run mode"
+        required: true
+        default: main
         type: string
 
 permissions:
@@ -32,7 +30,7 @@ jobs:
     steps:
       - name: Parse release metadata
         id: meta
-        if: ${{ !inputs.dry_run }}
+        if: ${{ github.event_name == 'workflow_call' }}
         env:
           DIST_PLAN: ${{ inputs.plan }}
         shell: bash
@@ -55,20 +53,20 @@ jobs:
           echo "prerelease=${prerelease}" >> "${GITHUB_OUTPUT}"
 
       - name: Checkout source at release tag
-        if: ${{ !inputs.dry_run }}
+        if: ${{ github.event_name == 'workflow_call' }}
         uses: actions/checkout@v6
         with:
           ref: ${{ steps.meta.outputs.tag }}
 
       - name: Checkout source for dry run
-        if: ${{ inputs.dry_run }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: actions/checkout@v6
         with:
-          ref: ${{ inputs.source_ref || github.sha }}
+          ref: ${{ inputs.ref }}
 
       - name: Derive dry-run metadata
         id: dry_meta
-        if: ${{ inputs.dry_run }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         shell: bash
         run: |
           version="$(
@@ -98,7 +96,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GHCR
-        if: ${{ !inputs.dry_run }}
+        if: ${{ github.event_name == 'workflow_call' }}
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -111,14 +109,14 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/${{ env.GHCR_IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ inputs.dry_run && steps.dry_meta.outputs.tag || steps.meta.outputs.tag }}
-            type=raw,value=${{ inputs.dry_run && steps.dry_meta.outputs.version || steps.meta.outputs.version }},enable=${{ !inputs.dry_run }}
-            type=raw,value=latest,enable=${{ !inputs.dry_run && steps.meta.outputs.prerelease != 'true' }}
+            type=raw,value=${{ github.event_name == 'workflow_dispatch' && steps.dry_meta.outputs.tag || steps.meta.outputs.tag }}
+            type=raw,value=${{ steps.meta.outputs.version }},enable=${{ github.event_name == 'workflow_call' }}
+            type=raw,value=latest,enable=${{ github.event_name == 'workflow_call' && steps.meta.outputs.prerelease != 'true' }}
           labels: |
             org.opencontainers.image.title=dynamate
             org.opencontainers.image.description=Terminal UI for DynamoDB exploration and querying
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.version=${{ inputs.dry_run && steps.dry_meta.outputs.version || steps.meta.outputs.version }}
+            org.opencontainers.image.version=${{ github.event_name == 'workflow_dispatch' && steps.dry_meta.outputs.version || steps.meta.outputs.version }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -126,6 +124,6 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ !inputs.dry_run }}
+          push: ${{ github.event_name == 'workflow_call' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
