ci(release): auto-generate changelog from conventional commits

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -357,3 +357,14 @@ jobs:
     permissions:
       "contents": "read"
       "packages": "write"
+
+  custom-changelog:
+    needs:
+      - plan
+      - announce
+    uses: ./.github/workflows/changelog.yml
+    with:
+      plan: ${{ needs.plan.outputs.val }}
+    secrets: inherit
+    permissions:
+      "contents": "write"
