--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@v1
         with:
@@ -51,6 +56,9 @@ jobs:
 
       - name: Check generated release workflow
         run: dist generate --mode=ci --check
+
+      - name: Lint Markdown
+        run: npx --yes markdownlint-cli@0.47.0 "**/*.md"
 
       - name: Check formatting
         run: cargo fmt --all --check
