--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,13 +7,27 @@ on:
         description: "dist plan output JSON"
         required: true
         type: string
+      publish:
+        description: "Whether to push image to GHCR"
+        required: true
+        type: boolean
   workflow_dispatch:
     inputs:
       ref:
-        description: "Git ref to build in dry-run mode"
+        description: "Git ref to build when no dist plan is provided"
         required: true
         default: main
         type: string
+      plan:
+        description: "Optional dist plan output JSON to use release metadata"
+        required: false
+        default: ""
+        type: string
+      publish:
+        description: "Whether to push image to GHCR"
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: read
@@ -30,7 +44,7 @@ jobs:
     steps:
       - name: Parse release metadata
         id: meta
-        if: ${{ github.event_name == 'workflow_call' }}
+        if: ${{ inputs.plan != '' }}
         env:
           DIST_PLAN: ${{ inputs.plan }}
         shell: bash
@@ -53,20 +67,20 @@ jobs:
           echo "prerelease=${prerelease}" >> "${GITHUB_OUTPUT}"
 
       - name: Checkout source at release tag
-        if: ${{ github.event_name == 'workflow_call' }}
+        if: ${{ inputs.plan != '' }}
         uses: actions/checkout@v6
         with:
           ref: ${{ steps.meta.outputs.tag }}
 
       - name: Checkout source for dry run
-        if: ${{ github.event_name == 'workflow_dispatch' }}
+        if: ${{ inputs.plan == '' }}
         uses: actions/checkout@v6
         with:
           ref: ${{ inputs.ref }}
 
       - name: Derive dry-run metadata
         id: dry_meta
-        if: ${{ github.event_name == 'workflow_dispatch' }}
+        if: ${{ inputs.plan == '' }}
         shell: bash
         run: |
           version="$(
@@ -96,7 +110,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GHCR
-        if: ${{ github.event_name == 'workflow_call' }}
+        if: ${{ inputs.publish }}
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -109,14 +123,14 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/${{ env.GHCR_IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ github.event_name == 'workflow_dispatch' && steps.dry_meta.outputs.tag || steps.meta.outputs.tag }}
-            type=raw,value=${{ steps.meta.outputs.version }},enable=${{ github.event_name == 'workflow_call' }}
-            type=raw,value=latest,enable=${{ github.event_name == 'workflow_call' && steps.meta.outputs.prerelease != 'true' }}
+            type=raw,value=${{ inputs.plan == '' && steps.dry_meta.outputs.tag || steps.meta.outputs.tag }}
+            type=raw,value=${{ steps.meta.outputs.version }},enable=${{ inputs.plan != '' }}
+            type=raw,value=latest,enable=${{ inputs.plan != '' && steps.meta.outputs.prerelease != 'true' }}
           labels: |
             org.opencontainers.image.title=dynamate
             org.opencontainers.image.description=Terminal UI for DynamoDB exploration and querying
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.version=${{ github.event_name == 'workflow_dispatch' && steps.dry_meta.outputs.version || steps.meta.outputs.version }}
+            org.opencontainers.image.version=${{ inputs.plan == '' && steps.dry_meta.outputs.version || steps.meta.outputs.version }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -124,7 +138,7 @@ jobs:
           context: .
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name == 'workflow_call' }}
+          push: ${{ inputs.publish }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
           cache-from: type=gha,scope=dynamate-docker
