fix(ci): allow release docker call without publish input
Release run 21885953336 failed with startup_failure because

dist-generated release.yml no longer passes the publish input to

the reusable docker workflow, but docker.yml still required it.

Make workflow_call.publish optional and default to true so release

dispatches remain valid and continue pushing GHCR images.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,8 @@ on:
         type: string
       publish:
         description: "Whether to push image to GHCR"
-        required: true
+        required: false
+        default: true
         type: boolean
   workflow_dispatch:
     inputs:
